# stellar-cartography

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  extract_data.js  openapi.json  package-lock.json  package.json
data/: stellar.db
examples/: test_api.sh
migrations/: 20240616000000_initial_schema.sql  20240617000000_add_spatial_coordinates.sql  20240618000000_add_gate_connections.sql  20250112000000_update_schema_for_json_structure.sql  20250113000000_add_type_names_table.sql
src/: coordinates.rs  database.rs  error.rs  main.rs  models.rs
src/handlers/: health.rs  mod.rs  systems.rs  type_names.rs
src/middleware/: mod.rs  rate_limit.rs  request_id.rs  security.rs
src/spatial/: mod.rs
utils/: extract_system_labels.js  is_valid_sqlite.js  pickle_to_json.js
